fixes tab position for large screens
Summary: this fixes a layout bug on large screen tabs

Test Plan: * test tabs

Reviewers: sophshep

Reviewed By: sophshep

Differential Revision: https://phabricator.ushahidi.com/D725

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*------------------------------------*\
     $BOURBON & FRIENDS
 \*------------------------------------*/
-/*@import "css3/selection";*/
+/* @import "css3/selection"; */
 html {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
@@ -1664,6 +1664,9 @@ ul.breadcrumb {
       bottom: 52px;
       display: block;
       padding: 0; }
+      @media screen and (min-width: 48em)  {
+        .tabs .tabs-menu .tabs-menu-list.open {
+          position: relative; } }
       .tabs .tabs-menu .tabs-menu-list.open li:hover {
         background: #ebebeb; }
     .tabs .tabs-menu .tabs-menu-list li {
