--- a/assets/sass/2_fragments/_tabs.scss
+++ b/assets/sass/2_fragments/_tabs.scss
@@ -103,6 +103,10 @@
                 display: block;
                 padding: 0;
 
+                @include media($small) {
+                    position: relative;
+                }
+
                 li:hover {
                     background: $lt-gray;
                 }
